--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 								<div class="col">
 									<div class="home_content">
 										<div class="home_title_container text-center">
-											<div class="home_title islive text-center"><h1>your <span>music.</span></h1></div>
+											<div class="home_title islive text-center"><h1>I-COME-<span>SOPRA.</span></h1></div>
 										</div>
 										<div class="tickets_form_container">
 											<form action="#" class="tickets_form">
