added email, took even more stuff out

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 							</ul>
 						</nav>
 
-						
+
 							<!-- Hamburger -->
 							<div class="hamburger d-flex flex-column align-items-end justify-content-between"><div></div><div></div><div></div></div>
 						</div>
@@ -93,24 +93,6 @@
 									<div class="home_content">
 										<div class="home_title_container text-center">
 											<div class="home_title islive text-center"><h1>I-COME-<span>SOPRA.</span></h1></div>
-										</div>
-										<div class="tickets_form_container">
-											<form action="#" class="tickets_form">
-												<div class="d-flex flex-md-row flex-column align-items-start justify-content-md-between justify-content-start">
-													<div class="tickets_form_inputs d-flex flex-row align-items-start justify-content-between">
-														<div class="custom_dropdown tickets_form_input cdd">
-															<div class="custom_dropdown_selected cdd">Event</div>
-															<ul class="cdd">
-																<li>Event 1</li>
-																<li>Event 2</li>
-																<li>Event 3</li>
-															</ul>
-														</div>
-														<input type="text" class="tickets_form_input" placeholder="Tickets" required="required">
-													</div>
-													<button class="tickets_form_button button"><span>get your tickets</span></button>
-												</div>
-											</form>
 										</div>
 									</div>
 								</div>
@@ -232,10 +214,6 @@
 						<div class="app_text">
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi condimentum, neque ac porttitor scelerisque, nisi nisl tincidunt enim, non aliquet diam neque sed urna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Suspendisse nec faucibus velit. Quisque eleifend orci ipsum, a bibendum lacus suscipit sit amet</p>
 						</div>
-						<div class="stores d-flex flex-row align-items-start justify-content-start flex-wrap">
-							<div class="store"><a href="#"><img src="images/appstore.png" alt=""></a></div>
-							<div class="store"><a href="#"><img src="images/googleplay.png" alt=""></a></div>
-						</div>
 					</div>
 				</div>
 
@@ -337,9 +315,13 @@
 				<!-- Newsletter Content -->
 				<div class="col-xl-6">
 					<div class="newsletter_content">
-						<div class="section_title"><h1>Subscribe & Follow</h1></div>
+						<div class="section_title"><h1>Contact Us</h1></div>
 						<div class="newsletter_text">
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi condimentum, neque ac porttitor scelerisque.</p>
+							<ul>
+								<li>emregenc2019@u.northwestern.edu</li>
+								<li>efesaatci2019@u.northwestern.edu</li>
+								<li>aaronkaneti2020@u.northwestern.edu</li>
+							</ul>
 						</div>
 					</div>
 				</div>
