Added Northwestern University & Bryan Pardo

--- a/index.html
+++ b/index.html
@@ -378,9 +378,10 @@
 			<div class="container">
 				<div class="row">
 					<div class="col">
-						<div class="copyright text-center"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></div>
+						<div class="copyright text-center">
+							<p>Northwestern University 2019</p>
+							<p>Prof. Bryan Pardo</p>
+						</div>
 					</div>
 				</div>
 			</div>
