--- a/index.html
+++ b/index.html
@@ -379,8 +379,8 @@
 				<div class="row">
 					<div class="col">
 						<div class="copyright text-center">
-							<p>Northwestern University 2019</p>
-							<p>Prof. Bryan Pardo</p>
+							<p>Northwestern University 2019<br>
+							Prof. Bryan Pardo</p>
 						</div>
 					</div>
 				</div>
