--- a/index.html
+++ b/index.html
@@ -355,21 +355,9 @@
 						<div class="logo">
 							<a href="#" class="d-flex flex-row align-items-end justify-content-start">
 								<span class="logo_bars d-flex flex-row align-items-end justify-content-between"><span></span><span></span><span></span><span></span><span></span></span>
-								<span class="logo_text">music</span>
+								<span class="logo_text">I-COME-SOPRA</span>
 							</a>
 						</div>
-
-						<!-- Footer Social -->
-						<div class="footer_social">
-							<ul class="d-flex flex-row align-items-center justify-content-center">
-								<li><a href="#"><i class="fa fa-pinterest" aria-hidden="true"></i></a></li>
-								<li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-								<li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-								<li><a href="#"><i class="fa fa-dribbble" aria-hidden="true"></i></a></li>
-								<li><a href="#"><i class="fa fa-behance" aria-hidden="true"></i></a></li>
-							</ul>
-						</div>
-
 					</div>
 				</div>
 			</div>
@@ -379,8 +367,7 @@
 				<div class="row">
 					<div class="col">
 						<div class="copyright text-center">
-							<p>Northwestern University 2019<br>
-							Prof. Bryan Pardo</p>
+							<p>Northwestern University 2019Prof. Bryan Pardo</p>
 						</div>
 					</div>
 				</div>
