--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
 				<div class="row">
 					<div class="col">
 						<div class="copyright text-center">
-							<p>Northwestern University 2019Prof. Bryan Pardo</p>
+							<p>Northwestern University 2019 / Prof. Bryan Pardo / EECS 352: Machine Perception of Music & Audio</p>
 						</div>
 					</div>
 				</div>
