Took the top navbar out

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Music</title>
+<title>i-comer-sopra</title>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="description" content="Music template project">
@@ -36,12 +36,12 @@
 
 						<!-- Main Navigation -->
 						<nav class="main_nav">
-							<ul class="d-flex flex-row align-items-center justify-content-start">
+							<!--<ul class="d-flex flex-row align-items-center justify-content-start">
 								<li class="active"><a href="index.html">Home</a></li>
 								<li><a href="artists.html">Artists</a></li>
 								<li><a href="#">Download Music</a></li>
 								<li><a href="blog.html">News</a></li>
-								<li><a href="contact.html">Contact</a></li>
+								<li><a href="contact.html">Contact</a></li>-->
 							</ul>
 						</nav>
 
