Took slides out

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 					</div>
 				</div>
 
-				<!-- Slide -->
+				<!-- Slide
 				<div class="slide">
 					<div class="background_image" style="background-image:url(images/index.jpg)"></div>
 					<div class="home_container">
@@ -137,7 +137,7 @@
 					</div>
 				</div>
 
-				<!-- Slide -->
+				Slide 
 				<div class="slide">
 					<div class="background_image" style="background-image:url(images/index.jpg)"></div>
 					<div class="home_container">
@@ -172,7 +172,7 @@
 						</div>
 					</div>
 				</div>
-
+-->
 			</div>
 
 			<!-- Home Slider Navigation -->
