--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>i-comer-sopra</title>
+<title>i-come-sopra</title>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="description" content="Music template project">
@@ -219,33 +219,6 @@
 		</div>
 	</div>
 
-	<!-- Featured -->
-
-	<div class="featured">
-		<div class="container">
-			<div class="row">
-				<div class="col">
-					<div class="section_title text-center"><h1>Featured Albums</h1></div>
-					<div class="featured_list">
-						<div id="jplayer_2" class="jp-jplayer"></div>
-						<div id="jp_container_2" class="jp-audio" role="application" aria-label="media player">
-							<div class="jp-type-playlist">
-								<div class="jp-playlist">
-									<ul class="d-flex flex-row align-items-start justify-content-start flex-wrap">
-										<li></li>
-									</ul>
-								</div>
-								<div class="jp-no-solution">
-									<span>Update Required</span>
-									To play the media you will need to either update your browser to a recent version or update your <a href="http://get.adobe.com/flashplayer/" target="_blank">Flash plugin</a>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
 
 	<!-- News -->
 
@@ -267,6 +240,11 @@
 							<div class="news_post_title"><a href="#">Music Seminary at Festival</a></div>
 							<div class="news_post_text">
 								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi condimentum, neque ac porttitor scelerisque, nisi nisl tincidunt enim, non aliquet diam neque sed urna.</p>
+								<audio controls>
+								  <source src="horse.ogg" type="audio/ogg">
+								  <source src="horse.mp3" type="audio/mpeg">
+								Your browser does not support the audio element.
+								</audio>
 							</div>
 						</div>
 					</div>
