More stuff taken out

--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
 				</div>
 
 				<!-- Newsletter Form -->
-				<div class="col-xl-6 nl_col">
+				<!--<div class="col-xl-6 nl_col">
 					<div class="newsletter_form_container d-flex flex-column align-items-start justify-content-end">
 						<form action="#" class="newsletter_form" id="newsletter_form">
 							<div class="d-flex flex-row align-items-start justify-content-between">
@@ -318,7 +318,7 @@
 		</div>
 	</div>
 
-	<!-- Footer -->
+	Start: Footer -->
 
 	<footer class="footer">
 		<div class="background_image" style="background-image:url(images/footer.jpg)"></div>
