--- a/index.html
+++ b/index.html
@@ -302,8 +302,8 @@
 					</div>
 				</div>
 
-				<!-- Newsletter Form -->
-				<!--<div class="col-xl-6 nl_col">
+				<!-- Newsletter Form
+				<div class="col-xl-6 nl_col">
 					<div class="newsletter_form_container d-flex flex-column align-items-start justify-content-end">
 						<form action="#" class="newsletter_form" id="newsletter_form">
 							<div class="d-flex flex-row align-items-start justify-content-between">
@@ -312,13 +312,13 @@
 							</div>
 						</form>
 					</div>
-				</div>
+				</div>-->
 
 			</div>
 		</div>
 	</div>
 
-	Start: Footer -->
+	<!-- Footer -->
 
 	<footer class="footer">
 		<div class="background_image" style="background-image:url(images/footer.jpg)"></div>
