--- a/index.html
+++ b/index.html
@@ -258,6 +258,11 @@
 							<div class="news_post_title"><a href="#">Festival list for 2019</a></div>
 							<div class="news_post_text">
 								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi condimentum, neque ac porttitor scelerisque, nisi nisl tincidunt enim, non aliquet diam neque sed urna.</p>
+								<audio controls>
+									<source src="horse.ogg" type="audio/ogg">
+									<source src="horse.mp3" type="audio/mpeg">
+								Your browser does not support the audio element.
+								</audio>
 							</div>
 						</div>
 						<div class="news_post_image order-md-2 order-1"><img src="images/news_2.jpg" alt=""></div>
@@ -273,6 +278,11 @@
 							<div class="news_post_title"><a href="#">New album release in 2019</a></div>
 							<div class="news_post_text">
 								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi condimentum, neque ac porttitor scelerisque, nisi nisl tincidunt enim, non aliquet diam neque sed urna.</p>
+								<audio controls>
+									<source src="horse.ogg" type="audio/ogg">
+									<source src="horse.mp3" type="audio/mpeg">
+								Your browser does not support the audio element.
+								</audio>
 							</div>
 						</div>
 					</div>
