--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col">
-					<div class="section_title"><h1>Latest News</h1></div>
+					<div class="section_title"><h1>Examples of the Model</h1></div>
 				</div>
 			</div>
 			<div class="row news_row">
