--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
 				<!-- App Content -->
 				<div class="col-lg-6 order-lg-2 order-1">
 					<div class="app_content d-flex flex-column align-items-start justify-content-center">
-						<div class="section_title"><h1>Get Your Music Right Now!</h1></div>
+						<div class="section_title"><h1>Introduction</h1></div>
 						<div class="app_text">
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi condimentum, neque ac porttitor scelerisque, nisi nisl tincidunt enim, non aliquet diam neque sed urna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Suspendisse nec faucibus velit. Quisque eleifend orci ipsum, a bibendum lacus suscipit sit amet</p>
 						</div>
