--- a/index.html
+++ b/index.html
@@ -34,20 +34,21 @@
 							</a>
 						</div>
 
-						<!-- Main Navigation -->
+						<!-- Main Navigation
 						<nav class="main_nav">
-							<!--<ul class="d-flex flex-row align-items-center justify-content-start">
+							<ul class="d-flex flex-row align-items-center justify-content-start">
 								<li class="active"><a href="index.html">Home</a></li>
 								<li><a href="artists.html">Artists</a></li>
 								<li><a href="#">Download Music</a></li>
 								<li><a href="blog.html">News</a></li>
-								<li><a href="contact.html">Contact</a></li>-->
+								<li><a href="contact.html">Contact</a></li>
 							</ul>
-						</nav>
+						</nav>-->
 
 
-							<!-- Hamburger -->
-							<div class="hamburger d-flex flex-column align-items-end justify-content-between"><div></div><div></div><div></div></div>
+							<!-- Hamburger
+							<div class="hamburger d-flex flex-column align-items-end justify-content-between"><div></div><div></div><div></div></div>-->
+							<div class="northwestern_logo"><img src="./images/NorthwesternLogoWhite.png"></div>
 						</div>
 					</div>
 				</div>
@@ -304,9 +305,9 @@
 						<div class="section_title"><h1>Contact Us</h1></div>
 						<div class="newsletter_text">
 							<ul>
-								<li>emregenc2019@u.northwestern.edu</li>
-								<li>efesaatci2019@u.northwestern.edu</li>
-								<li>aaronkaneti2020@u.northwestern.edu</li>
+								<li>Arda Genc : emregenc2019@u.northwestern.edu</li>
+								<li>Efe Saatci : efesaatci2019@u.northwestern.edu</li>
+								<li>Aaron Kaneti: aaronkaneti2020@u.northwestern.edu</li>
 							</ul>
 						</div>
 					</div>
