Changes so changes appear

--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
 							<ul>
 								<li>Arda Genc : emregenc2019@u.northwestern.edu</li>
 								<li>Efe Saatci : efesaatci2019@u.northwestern.edu</li>
-								<li>Aaron Kaneti: aaronkaneti2020@u.northwestern.edu</li>
+								<li>Aaron Kaneti: aarsonkaneti2020@u.northwestern.edu</li>
 							</ul>
 						</div>
 					</div>
