--- a/temp.html
+++ b/temp.html
@@ -83,231 +83,123 @@
 
 	<!-- Home -->
 
-	<div class="home">
 
-		<!-- Home Slider -->
-		<div class="home_slider_container">
-			<div class="owl-carousel owl-theme home_slider">
+  	 <!--Home -->
 
-				<!-- Slide -->
-				<div class="slide">
-					<div class="background_image" style="background-image:url(images/index.jpg)"></div>
-					<div class="home_container">
-						<div class="container">
-							<div class="row">
-								<div class="col">
-									<div class="home_content">
-										<div class="home_title_container text-center">
-											<div class="home_title islive text-center"><h1>your <span>music.</span></h1></div>
-										</div>
-										<div class="tickets_form_container">
-											<form action="#" class="tickets_form">
-												<div class="d-flex flex-md-row flex-column align-items-start justify-content-md-between justify-content-start">
-													<div class="tickets_form_inputs d-flex flex-row align-items-start justify-content-between">
-														<div class="custom_dropdown tickets_form_input cdd">
-															<div class="custom_dropdown_selected cdd">Event</div>
-															<ul class="cdd">
-																<li>Event 1</li>
-																<li>Event 2</li>
-																<li>Event 3</li>
-															</ul>
-														</div>
-														<input type="text" class="tickets_form_input" placeholder="Tickets" required="required">
-													</div>
-													<button class="tickets_form_button button"><span>get your tickets</span></button>
-												</div>
-											</form>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
+  	<div class="home">
 
-				<!-- Slide -->
-				<div class="slide">
-					<div class="background_image" style="background-image:url(images/index.jpg)"></div>
-					<div class="home_container">
-						<div class="container">
-							<div class="row">
-								<div class="col">
-									<div class="home_content">
-										<div class="home_title_container text-center">
-											<div class="home_title islive text-center"><h1>your <span>music.</span></h1></div>
-										</div>
-										<div class="tickets_form_container">
-											<form action="#" class="tickets_form">
-												<div class="d-flex flex-md-row flex-column align-items-start justify-content-md-between justify-content-start">
-													<div class="tickets_form_inputs d-flex flex-row align-items-start justify-content-between">
-														<div class="custom_dropdown tickets_form_input cdd">
-															<div class="custom_dropdown_selected cdd">Event</div>
-															<ul class="cdd">
-																<li>Event 1</li>
-																<li>Event 2</li>
-																<li>Event 3</li>
-															</ul>
-														</div>
-														<input type="text" class="tickets_form_input" placeholder="Tickets" required="required">
-													</div>
-													<button class="tickets_form_button button"><span>get your tickets</span></button>
-												</div>
-											</form>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
+  		<!-- Home Slider -->
+  		<div class="home_slider_container">
+  			<div class="owl-carousel owl-theme home_slider">
 
-				<!-- Slide -->
-				<div class="slide">
-					<div class="background_image" style="background-image:url(images/index.jpg)"></div>
-					<div class="home_container">
-						<div class="container">
-							<div class="row">
-								<div class="col">
-									<div class="home_content">
-										<div class="home_title_container text-center">
-											<div class="home_title islive text-center"><h1>your <span>music.</span></h1></div>
-										</div>
-										<div class="tickets_form_container">
-											<form action="#" class="tickets_form">
-												<div class="d-flex flex-md-row flex-column align-items-start justify-content-md-between justify-content-start">
-													<div class="tickets_form_inputs d-flex flex-row align-items-start justify-content-between">
-														<div class="custom_dropdown tickets_form_input cdd">
-															<div class="custom_dropdown_selected cdd">Event</div>
-															<ul class="cdd">
-																<li>Event 1</li>
-																<li>Event 2</li>
-																<li>Event 3</li>
-															</ul>
-														</div>
-														<input type="text" class="tickets_form_input" placeholder="Tickets" required="required">
-													</div>
-													<button class="tickets_form_button button"><span>get your tickets</span></button>
-												</div>
-											</form>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
+  				<!-- Slide -->
+  				<div class="slide">
+  					<div class="background_image" style="background-image:url(images/index.jpg)"></div>
+  					<div class="home_container">
+  						<div class="container">
+  							<div class="row">
+  								<div class="col">
+  									<div class="home_content">
+  										<div class="home_title_container text-center">
+  											<div class="home_title islive text-center"><h1>I-COME-<span>SOPRA.</span></h1></div>
+  										</div>
+  									</div>
+  								</div>
+  							</div>
+  						</div>
+  					</div>
+  				</div>
 
-			</div>
+  				<!-- Slide
+  				<div class="slide">
+  					<div class="background_image" style="background-image:url(images/index.jpg)"></div>
+  					<div class="home_container">
+  						<div class="container">
+  							<div class="row">
+  								<div class="col">
+  									<div class="home_content">
+  										<div class="home_title_container text-center">
+  											<div class="home_title islive text-center"><h1>your <span>music.</span></h1></div>
+  										</div>
+  										<div class="tickets_form_container">
+  											<form action="#" class="tickets_form">
+  												<div class="d-flex flex-md-row flex-column align-items-start justify-content-md-between justify-content-start">
+  													<div class="tickets_form_inputs d-flex flex-row align-items-start justify-content-between">
+  														<div class="custom_dropdown tickets_form_input cdd">
+  															<div class="custom_dropdown_selected cdd">Event</div>
+  															<ul class="cdd">
+  																<li>Event 1</li>
+  																<li>Event 2</li>
+  																<li>Event 3</li>
+  															</ul>
+  														</div>
+  														<input type="text" class="tickets_form_input" placeholder="Tickets" required="required">
+  													</div>
+  													<button class="tickets_form_button button"><span>get your tickets</span></button>
+  												</div>
+  											</form>
+  										</div>
+  									</div>
+  								</div>
+  							</div>
+  						</div>
+  					</div>
+  				</div>
 
-			<!-- Home Slider Navigation -->
-			<div class="home_slider_nav"><i class="fa fa-angle-right" aria-hidden="true"></i></div>
+  				Slide
+  				<div class="slide">
+  					<div class="background_image" style="background-image:url(images/index.jpg)"></div>
+  					<div class="home_container">
+  						<div class="container">
+  							<div class="row">
+  								<div class="col">
+  									<div class="home_content">
+  										<div class="home_title_container text-center">
+  											<div class="home_title islive text-center"><h1>your <span>music.</span></h1></div>
+  										</div>
+  										<div class="tickets_form_container">
+  											<form action="#" class="tickets_form">
+  												<div class="d-flex flex-md-row flex-column align-items-start justify-content-md-between justify-content-start">
+  													<div class="tickets_form_inputs d-flex flex-row align-items-start justify-content-between">
+  														<div class="custom_dropdown tickets_form_input cdd">
+  															<div class="custom_dropdown_selected cdd">Event</div>
+  															<ul class="cdd">
+  																<li>Event 1</li>
+  																<li>Event 2</li>
+  																<li>Event 3</li>
+  															</ul>
+  														</div>
+  														<input type="text" class="tickets_form_input" placeholder="Tickets" required="required">
+  													</div>
+  													<button class="tickets_form_button button"><span>get your tickets</span></button>
+  												</div>
+  											</form>
+  										</div>
+  									</div>
+  								</div>
+  							</div>
+  						</div>
+  					</div>
+  				</div>
+  -->
+  			</div>
 
-			<!-- Home Social -->
-			<div class="home_social">
-				<div class="d-flex flex-row align-items-center justify-content-start">
-					<div class="home_social_text">follow</div>
-					<div class="home_social_list">
-						<ul class="d-flex flex-row align-items-center justify-content-start">
-							<li><a href="#"><i class="fa fa-pinterest" aria-hidden="true"></i></a></li>
-							<li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-							<li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-							<li><a href="#"><i class="fa fa-dribbble" aria-hidden="true"></i></a></li>
-							<li><a href="#"><i class="fa fa-behance" aria-hidden="true"></i></a></li>
-						</ul>
-					</div>
-				</div>
-			</div>
 
-			<!-- Scroll Down -->
-			<div class="scroll_down scroll_down_link" data-scroll-to=".tours">
-				<a href="#"></a>
-				<div class="d-flex flex-row align-items-center justify-content-start">
-					<div>scroll down</div>
-					<div class="scroll_arrows d-flex flex-column align-items-start justify-content-start">
-						<img src="images/arrow_down.png" alt="">
-						<img src="images/arrow_down.png" alt="">
-					</div>
-				</div>
-			</div>
+  			<div class="scroll_down scroll_down_link" data-scroll-to=".tours">
+  				<a href="#"></a>
+  				<div class="d-flex flex-row align-items-center justify-content-start">
+  					<div>scroll down</div>
+  					<div class="scroll_arrows d-flex flex-column align-items-start justify-content-start">
+  						<img src="images/arrow_down.png" alt="">
+  						<img src="images/arrow_down.png" alt="">
+  					</div>
+  				</div>
+  			</div>
 
-		</div>
-	</div>
+  		</div>
+  	</div>
 
-	<!-- Song -->
 
-	<div class="song">
-		<div class="parallax_background parallax-window" data-parallax="scroll" data-image-src="images/song.jpg" data-speed="0.8"></div>
-		<div class="container">
-			<div class="row">
-				<div class="col">
-					<div class="song_content">
-
-						<!-- Player -->
-						<div class="single_player_container">
-							<div class="single_player d-flex flex-row align-items-center justify-content-start">
-								<div id="jplayer_1" class="jp-jplayer"></div>
-								<div id="jp_container_1" class="jp-audio" role="application" aria-label="media player">
-									<div class="jp-gui jp-interface d-flex flex-lg-row flex-column align-items-start justify-content-start">
-
-										<!-- Player Controls -->
-										<div class="player_controls_box d-flex flex-row align-items-start justify-content-start">
-											<div class="order-lg-1 order-2">
-												<div class="player_title">song of the week</div>
-												<div class="jp-controls-holder player_controls ml-auto d-flex flex-row align-items-start justify-content-start">
-													<button class="jp-play player_button" tabindex="0"></button>
-													<button class="jp-stop player_button" tabindex="0"></button>
-												</div>
-											</div>
-											<div class="song_image ml-lg-auto order-lg-2 order-1"><img src="images/song_1.jpg" alt=""></div>
-										</div>
-
-										<!-- Progress Bar -->
-										<div class="player_bars d-flex flex-row align-items-start justify-content-start">
-											<div class="player_progress_box">
-												<div class="jp-current-time" role="timer" aria-label="time">00:00</div>
-												<div class="song_info">
-													<div class="jp-artist" aria-label="title">Michael Smith</div>
-													<div class="jp-title" aria-label="title"></div>
-												</div>
-												<div class="jp-progress">
-													<div class="jp-seek-bar">
-														<div>
-															<div class="jp-play-bar"><span></span></div>
-														</div>
-													</div>
-												</div>
-												<div class="jp-duration ml-auto" role="timer" aria-label="duration">02:33</div>
-											</div>
-
-											<!-- Volume Controls -->
-											<div class="jp-volume-controls ml-lg-auto">
-												<div class="mute_button">
-													<button class="jp-mute" tabindex="0"></button>
-												</div>
-												<div class="d-flex flex-row align-items-center justify-content-start">
-													<div class="jp-volume-bar">
-														<div>
-															<div class="jp-volume-bar-value"></div>
-														</div>
-													</div>
-												</div>
-											</div>
-										</div>
-
-									</div>
-									<div class="jp-no-solution">
-										<span>Update Required</span>
-										To play the media you will need to either update your browser to a recent version or update your <a href="http://get.adobe.com/flashplayer/" target="_blank">Flash plugin</a>
-									</div>
-								</div>
-							</div>
-						</div>
-
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
 
 	<!-- Tours -->
 
