--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col">
-					<div class="header_content d-flex flex-row align-items-center justify-content-center">
+					<div class="header_content d-flex flex-row align-items-center justify-content-center" id = "headers">
 
 						<!-- Logo -->
 						<div class="logo">
@@ -34,21 +34,20 @@
 							</a>
 						</div>
 
-						<!-- Main Navigation
+						<Main Navigation
 						<nav class="main_nav">
-							<ul class="d-flex flex-row align-items-center justify-content-start">
-								<li class="active"><a href="index.html">Home</a></li>
-								<li><a href="artists.html">Artists</a></li>
-								<li><a href="#">Download Music</a></li>
-								<li><a href="blog.html">News</a></li>
-								<li><a href="contact.html">Contact</a></li>
+							<ul class="d-flex flex-row align-items-center justify-content-start" id = "navbar">
+								<li><a href="#home">Introduction</a></li>
+								<li><a href="#examples">Examples</a></li>
+								<li><a href="#">Explanation</a></li>
+								<li class = "contactus"><a href="#contact">Contact</a></li>
 							</ul>
-						</nav>-->
+						</nav>
 
 
 							<!-- Hamburger
 							<div class="hamburger d-flex flex-column align-items-end justify-content-between"><div></div><div></div><div></div></div>-->
-							<div class="northwestern_logo"><img src="./images/NorthwesternLogoWhite.png"></div>
+							<img class = "northwestern_logo" src="./images/NorthwesternLogoWhite.png">
 						</div>
 					</div>
 				</div>
@@ -56,30 +55,10 @@
 		</div>
 	</header>
 
-	<!-- Menu -->
-
-	<div class="menu">
-		<div class="menu_container">
-			<div class="menu_background"></div>
-			<div class="menu_close"><i class="fa fa-times" aria-hidden="true"></i></div>
-			<div class="menu_content d-flex flex-column align-items-center justify-content-start">
-				<nav class="menu_nav">
-					<ul class="d-flex flex-column align-items-center justify-content-start">
-						<li><a href="index.html">Home</a></li>
-						<li><a href="artists.html">Artists</a></li>
-						<li><a href="#">Download Music</a></li>
-						<li><a href="blog.html">News</a></li>
-						<li><a href="contact.html">Contact</a></li>
-					</ul>
-				</nav>
-			</div>
-		</div>
-	</div>
-
 
 	<!-- App -->
 
-	<div class="app">
+	<div class="app" id ="home">
 		<div class="container">
 			<div class="row row-lg-eq-height">
 
@@ -111,7 +90,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col">
-					<div class="section_title"><h1>Examples of the Model</h1></div>
+					<div class="section_title" id = "examples"><h1>Examples of the Model</h1></div>
 				</div>
 			</div>
 			<div class="row news_row">
@@ -179,7 +158,7 @@
 
 	<!-- Newsletter -->
 
-	<div class="newsletter">
+	<div class="newsletter" id = "contact">
 		<div class="container">
 			<div class="row">
 
@@ -188,7 +167,7 @@
 					<div class="newsletter_content">
 						<div class="section_title"><h1>Contact Us</h1></div>
 						<div class="newsletter_text">
-							<ul>
+							<ul class = "names">
 								<li>Arda Genc : emregenc2019@u.northwestern.edu</li>
 								<li>Efe Saatci : efesaatci2019@u.northwestern.edu</li>
 								<li>Aaron Kaneti: aarsonkaneti2020@u.northwestern.edu</li>
