--- a/index.html
+++ b/index.html
@@ -101,13 +101,28 @@
 						<div class="news_post_image"><img src="images/news_1.jpg" alt=""></div>
 						<div class="news_post_content">
 							<div class="news_post_date"><a href="#">Oct 19, 2018</a></div>
-							<div class="news_post_title"><a href="#">Music Seminary at Festival</a></div>
+							<div class="news_post_title"><a href="#">Random Outputs</a></div>
 							<div class="news_post_text">
 								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi condimentum, neque ac porttitor scelerisque, nisi nisl tincidunt enim, non aliquet diam neque sed urna.</p>
 								<audio controls>
-								  <source src="horse.ogg" type="audio/ogg">
-								  <source src="horse.mp3" type="audio/mpeg">
-								Your browser does not support the audio element.
+									<source src="./audioFiles/random-outputs/randomoutput1.mp3" type="audio/mpeg">
+										Your browser does not support the audio element.
+								</audio>
+								<audio controls>
+									<source src="./audioFiles/random-outputs/random-output2.mp3" type="audio/mpeg">
+										Your browser does not support the audio element.
+								</audio>
+								<audio controls>
+									<source src="./audioFiles/random-outputs/random-output3.mp3" type="audio/mpeg">
+										Your browser does not support the audio element.
+								</audio>
+								<audio controls>
+									<source src="./audioFiles/random-outputs/random-output4.mp3" type="audio/mpeg">
+										Your browser does not support the audio element.
+								</audio>
+								<audio controls>
+									<source src="./audioFiles/random-outputs/random-output5.mp3" type="audio/mpeg">
+										Your browser does not support the audio element.
 								</audio>
 							</div>
 						</div>
@@ -118,13 +133,27 @@
 				<div class="col-xl-4 col-md-6">
 					<div class="news_post image_bottom d-flex flex-column align-items-start justify-content-start">
 						<div class="news_post_content order-md-1 order-2">
-							<div class="news_post_date"><a href="#">Oct 19, 2018</a></div>
-							<div class="news_post_title"><a href="#">Festival list for 2019</a></div>
+							<div class="news_post_title"><a href="#">InKey Outputs</a></div>
 							<div class="news_post_text">
 								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi condimentum, neque ac porttitor scelerisque, nisi nisl tincidunt enim, non aliquet diam neque sed urna.</p>
 								<audio controls>
-									<source src="horse.ogg" type="audio/ogg">
-									<source src="horse.mp3" type="audio/mpeg">
+									<source src="./audioFiles/inKey-outputs/inKey-output1.mp3" type="audio/mpeg">
+								Your browser does not support the audio element.
+								</audio>
+								<audio controls>
+									<source src="./audioFiles/inKey-outputs/inKey-output2.mp3" type="audio/mpeg">
+								Your browser does not support the audio element.
+								</audio>
+								<audio controls>
+									<source src="./audioFiles/inKey-outputs/inKey-output3.mp3" type="audio/mpeg">
+								Your browser does not support the audio element.
+								</audio>
+								<audio controls>
+									<source src="./audioFiles/inKey-outputs/inKey-output4.mp3" type="audio/mpeg">
+								Your browser does not support the audio element.
+								</audio>
+								<audio controls>
+									<source src="./audioFiles/inKey-outputs/inKey-output5.mp3" type="audio/mpeg">
 								Your browser does not support the audio element.
 								</audio>
 							</div>
