added real folk tunes

--- a/index.html
+++ b/index.html
@@ -96,9 +96,7 @@
 				<!-- News Post -->
 				<div class="col-xl-4 col-md-6">
 					<div class="news_post image_top">
-						<div class="news_post_image"><img src="images/news_1.jpg" alt=""></div>
 						<div class="news_post_content">
-							<div class="news_post_date"><a href="#">Oct 19, 2018</a></div>
 							<div class="news_post_title"><a href="#">Random Outputs</a></div>
 							<div class="news_post_text">
 								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi condimentum, neque ac porttitor scelerisque, nisi nisl tincidunt enim, non aliquet diam neque sed urna.</p>
@@ -131,6 +129,15 @@
 				<div class="col-xl-4 col-md-6">
 					<div class="news_post image_bottom d-flex flex-column align-items-start justify-content-start">
 						<div class="news_post_content order-md-1 order-2">
+
+						</div>
+					</div>
+				</div>
+
+				<!-- News Post -->
+				<div class="col-xl-4 col-md-6">
+					<div class="news_post image_top">
+						<div class="news_post_content">
 							<div class="news_post_title"><a href="#">InKey Outputs</a></div>
 							<div class="news_post_text">
 								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi condimentum, neque ac porttitor scelerisque, nisi nisl tincidunt enim, non aliquet diam neque sed urna.</p>
@@ -156,22 +163,92 @@
 								</audio>
 							</div>
 						</div>
-						<div class="news_post_image order-md-2 order-1"><img src="images/news_2.jpg" alt=""></div>
+					</div>
+				</div>
+
+			</div>
+		</div>
+	</div>
+
+	<!-- Division 2 -->
+
+	<div class="news">
+		<div class="container">
+			<div class="row">
+				<div class="col">
+					<div class="section_title" id = "examples"><h1>Examples of the Model</h1></div>
+				</div>
+			</div>
+			<div class="row news_row">
+
+				<!-- News Post -->
+				<div class="col-xl-4 col-md-6">
+					<div class="news_post image_top">
+						<div class="news_post_content">
+							<div class="news_post_title"><a href="#">Random Outputs</a></div>
+							<div class="news_post_text">
+								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi condimentum, neque ac porttitor scelerisque, nisi nisl tincidunt enim, non aliquet diam neque sed urna.</p>
+								<audio controls>
+									<source src="./audioFiles/random-outputs/randomoutput1.mp3" type="audio/mpeg">
+										Your browser does not support the audio element.
+								</audio>
+								<audio controls>
+									<source src="./audioFiles/random-outputs/random-output2.mp3" type="audio/mpeg">
+										Your browser does not support the audio element.
+								</audio>
+								<audio controls>
+									<source src="./audioFiles/random-outputs/random-output3.mp3" type="audio/mpeg">
+										Your browser does not support the audio element.
+								</audio>
+								<audio controls>
+									<source src="./audioFiles/random-outputs/random-output4.mp3" type="audio/mpeg">
+										Your browser does not support the audio element.
+								</audio>
+								<audio controls>
+									<source src="./audioFiles/random-outputs/random-output5.mp3" type="audio/mpeg">
+										Your browser does not support the audio element.
+								</audio>
+							</div>
+						</div>
+					</div>
+				</div>
+
+				<!-- News Post -->
+				<div class="col-xl-4 col-md-6">
+					<div class="news_post image_bottom d-flex flex-column align-items-start justify-content-start">
+						<div class="news_post_content order-md-1 order-2">
+
+						</div>
+						<div class="news_post_image order-md-2 order-1"></div>
 					</div>
 				</div>
 
 				<!-- News Post -->
 				<div class="col-xl-4 col-md-6">
 					<div class="news_post image_top">
-						<div class="news_post_image"><img src="images/news_3.jpg" alt=""></div>
 						<div class="news_post_content">
 							<div class="news_post_date"><a href="#">Oct 19, 2018</a></div>
-							<div class="news_post_title"><a href="#">New album release in 2019</a></div>
+							<div class="news_post_title"><a href="#">Original Folk Tunes</a></div>
 							<div class="news_post_text">
 								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi condimentum, neque ac porttitor scelerisque, nisi nisl tincidunt enim, non aliquet diam neque sed urna.</p>
 								<audio controls>
-									<source src="horse.ogg" type="audio/ogg">
-									<source src="horse.mp3" type="audio/mpeg">
+									<source src="./audioFiles/real_folk_tunes/real_folk_tune1.mp3" type="audio/mpeg">
+								Your browser does not support the audio element.
+								</audio>
+								<audio controls>
+									<source src="./audioFiles/real_folk_tunes/real_folk_tune2.mp3" type="audio/mpeg">
+								Your browser does not support the audio element.
+								</audio>
+								<audio controls>
+									<source src="./audioFiles/real_folk_tunes/real_folk_tune3.mp3" type="audio/mpeg">
+								Your browser does not support the audio element.
+								</audio>
+								<audio controls>
+									<source src="./audioFiles/real_folk_tunes/real_folk_tune4.mp3" type="audio/mpeg">
+								Your browser does not support the audio element.
+								</audio>
+								<audio controls>
+									<source src="./audioFiles/real_folk_tunes/real_folk_tune5.mp3" type="audio/mpeg">
 								Your browser does not support the audio element.
 								</audio>
 							</div>
@@ -183,7 +260,6 @@
 		</div>
 	</div>
 
-	<!-- Newsletter -->
 
 	<div class="newsletter" id = "contact">
 		<div class="container">
@@ -221,8 +297,8 @@
 
 	<!-- Footer -->
 
-	<footer class="footer">
-		<div class="background_image" style="background-image:url(images/footer.jpg)"></div>
+	<footer class="footer_bar">
+		<div class="background_image" ></div>
 		<div class="footer_content">
 			<div class="container">
 				<div class="row">
