--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col">
-					<div class="section_title" id = "project_name"><h1 class = "index_header">I-COME-SOMPRA</h1></div>
+					<div class="section_title" id = "project_name"><h1 class = "index_header">I-COME-SOPRA</h1></div>
           <div class="">
             <p class ="index_def">This is the homepage of I-Come-Sopra, the AI composer! I-Come-Sopra is an AI built and trained for the class EECS 352.</p>
             <div class = "Credits">
