--- a/home.html
+++ b/home.html
@@ -306,7 +306,7 @@
 							<ul class = "names">
 								<li>Arda Genc : emregenc2019@u.northwestern.edu</li>
 								<li>Efe Saatci : efesaatci2019@u.northwestern.edu</li>
-								<li>Aaron Kaneti: aarsonkaneti2020@u.northwestern.edu</li>
+								<li>Aaron Kaneti: aaronkaneti2020@u.northwestern.edu</li>
 							</ul>
 						</div>
 					</div>
