Took lorem ipsums out

--- a/home.html
+++ b/home.html
@@ -133,8 +133,8 @@
 						<div class="news_post_content">
 							<div class="news_post_title"><a href="#">Random Outputs</a></div>
 							<div class="news_post_text">
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi condimentum, neque ac porttitor scelerisque, nisi nisl tincidunt enim, non aliquet diam neque sed urna.</p>
-								<audio controls>
+								<!--<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi condimentum, neque ac porttitor scelerisque, nisi nisl tincidunt enim, non aliquet diam neque sed urna.</p>
+								--><audio controls>
 									<source src="./audioFiles/random-outputs/randomoutput1.mp3" type="audio/mpeg">
 										Your browser does not support the audio element.
 								</audio>
@@ -174,8 +174,8 @@
 						<div class="news_post_content">
 							<div class="news_post_title"><a href="#">InKey Outputs</a></div>
 							<div class="news_post_text">
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi condimentum, neque ac porttitor scelerisque, nisi nisl tincidunt enim, non aliquet diam neque sed urna.</p>
-								<audio controls>
+								<!--<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi condimentum, neque ac porttitor scelerisque, nisi nisl tincidunt enim, non aliquet diam neque sed urna.</p>
+								--><audio controls>
 									<source src="./audioFiles/inKey-outputs/inKey-output1.mp3" type="audio/mpeg">
 								Your browser does not support the audio element.
 								</audio>
@@ -221,8 +221,8 @@
 						<div class="news_post_content">
 							<div class="news_post_title"><a href="#">LSTM Outputs</a></div>
 							<div class="news_post_text">
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi condimentum, neque ac porttitor scelerisque, nisi nisl tincidunt enim, non aliquet diam neque sed urna.</p>
-								<audio controls>
+								<!--<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi condimentum, neque ac porttitor scelerisque, nisi nisl tincidunt enim, non aliquet diam neque sed urna.</p>
+								--><audio controls>
 									<source src="./audioFiles/lstm_outputs/1-output_1.mp3" type="audio/mpeg">
 										Your browser does not support the audio element.
 								</audio>
@@ -263,8 +263,8 @@
 						<div class="news_post_content">
 							<div class="news_post_title"><a href="#">Original Folk Tunes</a></div>
 							<div class="news_post_text">
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi condimentum, neque ac porttitor scelerisque, nisi nisl tincidunt enim, non aliquet diam neque sed urna.</p>
-								<audio controls>
+								<!--<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi condimentum, neque ac porttitor scelerisque, nisi nisl tincidunt enim, non aliquet diam neque sed urna.</p>
+								--><audio controls>
 									<source src="./audioFiles/real_folk_tunes/real_folk_tune1.mp3" type="audio/mpeg">
 								Your browser does not support the audio element.
 								</audio>
