Added full course name

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 				<div class="col">
 					<div class="section_title" id = "project_name"><h1 class = "index_header">I-COME-SOPRA</h1></div>
           <div class="">
-            <p class ="index_def">This is the homepage of I-Come-Sopra, the AI composer! I-Come-Sopra is an AI built and trained for the class EECS 352.</p>
+            <p class ="index_def">This is the homepage of I-Come-Sopra, the AI composer! I-Come-Sopra is an AI built and trained for the class EECS 352: Machine Perception of Music & Audio.</p>
             <div class = "Credits">
               <p class ="title">Built by</p>
               <ul class = "builders">
