Added quick navbar

--- a/home.html
+++ b/home.html
@@ -37,8 +37,8 @@
 						<nav class="main_nav">
 							<ul class="d-flex flex-row align-items-center justify-content-start" id = "navbar">
 								<li><a href="#home">Introduction</a></li>
+								<li><a href="#graphs">Graphs</a></li>
 								<li><a href="#examples">Examples</a></li>
-								<li><a href="#">Explanation</a></li>
 								<li class = "contactus"><a href="#contact">Contact</a></li>
 							</ul>
 						</nav>
@@ -82,7 +82,7 @@
 	</div>
 	<!-- Featured -->
 
-	<div class="featured">
+	<div class="featured" id = "graphs">
 		<div class="container">
 			<div class="row">
 				<div class="col">
