Added link to northwestern homepage

--- a/home.html
+++ b/home.html
@@ -42,7 +42,7 @@
 								<li class = "contactus"><a href="#contact">Contact</a></li>
 							</ul>
 						</nav>
-						<img class = "northwestern_logo" src="./images/NorthwesternLogoWhite.png">
+						<a href= "northwestern.edu"><img class = "northwestern_logo" src="./images/NorthwesternLogoWhite.png"></a>
 
 							<!-- Hamburger
 							<div class="hamburger d-flex flex-column align-items-end justify-content-between"><div></div><div></div><div></div></div>-->
