Fixed dimensional issues

--- a/home.html
+++ b/home.html
@@ -122,7 +122,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col">
-					<div class="section_title" id = "examples"><h1>Examples of the Model</h1></div>
+					<div class="section_title" id = "examples"><h1>Audio Examples</h1></div>
 				</div>
 			</div>
 			<div class="row news_row">
@@ -208,11 +208,6 @@
 
 	<div class="news">
 		<div class="container">
-			<div class="row">
-				<div class="col">
-					<div class="section_title" id = "examples"><h1>More Examples of the Model and Some Real Folk Tunes</h1></div>
-				</div>
-			</div>
 			<div class="row news_row">
 
 				<!-- News Post -->
