--- a/home.html
+++ b/home.html
@@ -92,7 +92,7 @@
 							<p style={color:black;text-align:center;}>Dropout: 0.5, Batch Size: 30, Number of Steps:  10</p>
 							<img class="graphs" src="./images/graphs_iter_1/note_accuracy_iter_1.png">
 							<img class="graphs" src="./images/graphs_iter_1/time_accuracy_iter_1.png">
-							<img class="graphs" style="margin-right:16.9%;"src="./images/graphs_iter_1/note_loss_iter1.png">
+							<img class="graphs" src="./images/graphs_iter_1/note_loss_iter1.png">
 							<img class="graphs" src="./images/graphs_iter_1/time_loss_iter_1.png">
 						</div>
 						<div class ="row_2">
