changed from graphs to results

--- a/home.html
+++ b/home.html
@@ -86,7 +86,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col">
-					<div class="section_title text-center"><h1>Graphs of the Iterations of Training </h1></div>
+					<div class="section_title text-center"><h1>Results of the Iterations of Training </h1></div>
 						<div class ="row_1">
 							<h1 style="font-size:30px;text-align:center;margin-bottom:20px;margin-top:20px;'">Iteration 1</h1>
 							<p style={color:black;text-align:center;}>Dropout: 0.5, Batch Size: 30, Number of Steps:  10</p>
