--- a/home.html
+++ b/home.html
@@ -37,7 +37,7 @@
 						<nav class="main_nav">
 							<ul class="d-flex flex-row align-items-center justify-content-start" id = "navbar">
 								<li><a href="#home">Introduction</a></li>
-								<li><a href="#graphs">Graphs</a></li>
+								<li><a href="#results">Results</a></li>
 								<li><a href="#examples">Examples</a></li>
 								<li class = "contactus"><a href="#contact">Contact</a></li>
 							</ul>
@@ -82,7 +82,7 @@
 	</div>
 	<!-- Featured -->
 
-	<div class="featured" id = "graphs">
+	<div class="featured" id = "results">
 		<div class="container">
 			<div class="row">
 				<div class="col">
