Added quiz section

--- a/home.html
+++ b/home.html
@@ -39,6 +39,7 @@
 								<li><a href="#home">Introduction</a></li>
 								<li><a href="#results">Results</a></li>
 								<li><a href="#examples">Examples</a></li>
+								<li class = "quiz"><a href="#">quiz</a></li>
 								<li class = "contactus"><a href="#contact">Contact</a></li>
 							</ul>
 						</nav>
@@ -81,7 +82,7 @@
 			</div>
 		</div>
 	</div>
-	<!-- Featured -->
+	<!-- Results -->
 
 	<div class="featured" id = "results">
 		<div class="container">
@@ -289,6 +290,29 @@
 		</div>
 	</div>
 
+	<!-- Quiz -->
+
+	<div class="featured" id = "quiz">
+		<div class="container">
+			<div class="row">
+				<div class="col">
+					<h1 class ="quiz_section">Quiz</h1>
+					<p>Here is an example audio clip for from the data set. Which category from above does this clip sound the most like?</p>
+					<div class = "buttons">
+						<div class = "button">
+							<button class="aaron_button index_button"><a href="home.html"><span>Random</span></a></button>
+						</div>
+						<div class = "button">
+							<button class="aaron_button index_button"><a href="home.html"><span>LSTM</span></a></button>
+						</div>
+						<div class = "button">
+							<button class="aaron_button index_button"><a href="home.html"><span>InKey</span></a></button>
+						</div>
+				</div>
+				</div>
+			</div>
+		</div>
+	</div>
 
 	<div class="newsletter" id = "contact">
 		<div class="container">
