--- a/home.html
+++ b/home.html
@@ -39,7 +39,7 @@
 								<li><a href="#home">Introduction</a></li>
 								<li><a href="#results">Results</a></li>
 								<li><a href="#examples">Examples</a></li>
-								<li class = "quiz"><a href="#">quiz</a></li>
+								<li><a href="#">Quiz</a></li>
 								<li class = "contactus"><a href="#contact">Contact</a></li>
 							</ul>
 						</nav>
