--- a/home.html
+++ b/home.html
@@ -309,6 +309,10 @@
 							<button class="aaron_button index_button"><a href="home.html"><span>InKey</span></a></button>
 						</div>
 				</div>
+				<audio controls>
+					<source src="./audioFiles/quiz_audio.mp3" type="audio/mpeg">
+						Your browser does not support the audio element.
+				</audio>
 				</div>
 			</div>
 		</div>
