--- a/home.html
+++ b/home.html
@@ -297,7 +297,7 @@
 			<div class="row">
 				<div class="col">
 					<h1 class ="quiz_section">Quiz</h1>
-					<p>Here is an example audio clip for from the data set. Which category from above does this clip sound the most like?</p>
+					<p>Here is an example audio clip from the data set. Which category from above does this clip sound the most like?</p>
 					<div class = "buttons">
 						<div class = "button">
 							<button class="aaron_button index_button"><a href="home.html"><span>Random</span></a></button>
