--- a/home.html
+++ b/home.html
@@ -260,8 +260,7 @@
 						<div class="news_post_content">
 							<div class="news_post_title"><a href="#">Original Folk Tunes</a></div>
 							<div class="news_post_text">
-								<!--<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi condimentum, neque ac porttitor scelerisque, nisi nisl tincidunt enim, non aliquet diam neque sed urna.</p>
-								--><audio controls>
+								audio controls>
 									<source src="./audioFiles/real_folk_tunes/real_folk_tune1.mp3" type="audio/mpeg">
 								Your browser does not support the audio element.
 								</audio>
@@ -297,13 +296,15 @@
 			<div class="row">
 				<div class="col">
 					<h1 class ="quiz_section">Quiz</h1>
-					<p>Here is an example audio clip from the data set. Which category from above does this clip sound the most like?</p>
+					<p>Here is an example audio clip from the data set. </p>
 					<div class = "quizer">
 					<audio controls>
 						<source src="./audioFiles/quiz_quizer.mp3" type="audio/mpeg">
 							Your browser does not support the audio element.
 					</audio>
 				</div>
+					<p>Which category from above does this clip sound the most like?</p>
+
 					<div class = "quized">
 						<div>
 							<audio controls>
