Changes in text

--- a/home.html
+++ b/home.html
@@ -303,7 +303,7 @@
 							Your browser does not support the audio element.
 					</audio>
 				</div>
-					<p>Which category from above does this clip sound the most like?</p>
+					<p>Which of the below sounds most similar to the above example? </p>
 
 					<div class = "quized">
 						<div>
