--- a/home.html
+++ b/home.html
@@ -299,7 +299,7 @@
 					<p>Here is an example audio clip from the data set. </p>
 					<div class = "quizer">
 					<audio controls>
-						<source src="./audioFiles/quiz_quizer.mp3" type="audio/mpeg">
+						<source src="./audioFiles/real_folk_tunes/real_folk_tune4.mp3" type="audio/mpeg">
 							Your browser does not support the audio element.
 					</audio>
 				</div>
@@ -335,7 +335,7 @@
 						</div>
 					</div>
 
-					<p id = "picked">You picked: </p>
+					<p id = "picked"><strong>You picked: </strong></p>
 				</div>
 			</div>
 		</div>
