--- a/home.html
+++ b/home.html
@@ -260,7 +260,7 @@
 						<div class="news_post_content">
 							<div class="news_post_title"><a href="#">Original Folk Tunes</a></div>
 							<div class="news_post_text">
-								audio controls>
+								<audio controls>
 									<source src="./audioFiles/real_folk_tunes/real_folk_tune1.mp3" type="audio/mpeg">
 								Your browser does not support the audio element.
 								</audio>
